--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -59,8 +59,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Benevolix.png
+    - assets/images/Benevolix.png
 
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
