--- a/benevolix_app/android/app/src/main/AndroidManifest.xml
+++ b/benevolix_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.benevolix_app">
     <application
         android:label="benevolix_app"
         android:name="${applicationName}"
