--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.8.0+1
   freezed_annotation: ^2.4.4
   http: ^1.2.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
