--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -40,6 +40,8 @@ flutter:
 
   assets:
     - assets/images/Benevolix.png
+    - assets/images/home_icon.png
+    - assets/images/user_icon.png
 
   fonts:
     - family: Poppins
