--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
     - assets/images/Benevolix.png
     - assets/images/home_icon.png
     - assets/images/user_icon.png
+    - assets/images/close.png
 
   fonts:
     - family: Poppins
