--- a/benevolix_app/android/app/src/main/AndroidManifest.xml
+++ b/benevolix_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.benevolix_app">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="benevolix_app"
         android:name="${applicationName}"
