--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -11,24 +11,22 @@ dependencies:
   flutter:
     sdk: flutter
     
-
-
   cupertino_icons: ^1.0.8
-
+  flutter_dotenv: ^5.2.1
   http: ^1.3.0
   shared_preferences: ^2.0.6
   flutter_riverpod: ^2.6.1
   dio: ^5.8.0+1
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.0.0
   font_awesome_flutter: ^10.8.0
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.2.4
   intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.6
-  freezed: ^2.4.5
+  build_runner: ^2.4.15
+  freezed: ^3.0.4
   json_serializable: ^6.7.1
 
   flutter_lints: ^5.0.0
@@ -41,13 +39,13 @@ flutter:
 
   assets:
     - assets/images/Benevolix.png
-    - assets/images/home_icon.png
     - assets/images/user_icon.png
     - assets/images/close.png
     - assets/images/date_icon.png
     - assets/images/place_icon.png
     - assets/images/hashtag_icon.png
     - assets/images/sablier_icon.png
+    - .env
 
   fonts:
     - family: Poppins
