--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_secure_storage: ^9.2.4
   intl: ^0.20.2
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
