--- a/benevolix_app/pubspec.yaml
+++ b/benevolix_app/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.20.2
   permission_handler: ^11.4.0
   flutter_launcher_icons: ^0.13.1
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
